# rsa-crosbot

./: .gitignore  README.md
crosbot/: CMakeLists.txt  Makefile  package.xml
crosbot/cfg/: rosdoc.yaml
crosbot/cmake/: crosbot-extras.cmake.in
crosbot/include/crosbot/: config.hpp  data.hpp  exception.hpp  exceptions.hpp  geometry.hpp  handle.hpp  jobDispatcher.hpp  serialization.hpp  thread.hpp  utils.hpp
crosbot/include/crosbot/config/: rosconfig.hpp  xmldocconfig.hpp
crosbot/include/crosbot/controls/: command.hpp  defines.hpp  status.hpp
crosbot/include/crosbot/data/: colour.hpp  defines.hpp  image.hpp  time.hpp  timestampedData.hpp  uuid.hpp
crosbot/include/crosbot/geometry/: defines.hpp  index2d.hpp  pointCloud.hpp  points.hpp  poses.hpp  quaternion.hpp
crosbot/include/crosbot/handle/: handle_cpp03.hpp  handle_cpp11.hpp
crosbot/include/crosbot/serialization/: data.hpp  geometry.hpp
crosbot/msg/: ColouredCloudMsg.msg  ColouredPointMsg.msg  PointCloudMsg.msg
crosbot/src/: config.cpp  data.cpp  exceptions.cpp  handle.cpp  image.cpp  image.hpp  jobDispatcher.cpp  jpeg.cpp  jpeg.hpp  serialization.cpp  thread.cpp
crosbot/src/control/: control.cpp
crosbot/src/data/: image.cpp  time.cpp
crosbot/src/geometry/: pointCloud.cpp  quaternion.cpp
crosbot_3d_graphslam/: CMakeLists.txt  package.xml
crosbot_3d_graphslam/launch/: crosbot_3d_graphslam_kinect.launch
crosbot_3d_graphslam/src/: depthPoints.cpp  graphSlam3D.cpp  graphSlam3DCPU.cpp  graphSlam3DNode.cpp  local3DMap.cpp  main.cpp
crosbot_3d_graphslam_display/: CMakeLists.txt  package.xml
crosbot_3d_graphslam_display/launch/: crosbot_3d_graphslam_display.launch
crosbot_3d_graphslam_display/src/: graphSlamDisplay.cpp  graphSlamDisplayNode.cpp  main.cpp
crosbot_3d_graphslam_full/: CMakeLists.txt  package.xml
crosbot_3d_graphslam_full/cmake/: FindG2O.cmake  FindSuiteSparse.cmake
crosbot_3d_graphslam_full/launch/: crosbot_3d_graphslam_full.launch  crosbot_3d_graphslam_full_board.launch  crosbot_3d_graphslam_full_freSlam.launch  crosbot_3d_graphslam_full_lab.launch  crosbot_3d_graphslam_full_stata.launch
crosbot_3d_graphslam_full/src/: graphSlamFull3D.cpp  graphSlamFull3DNode.cpp  main.cpp
crosbot_3d_graphslam_gpu/: CMakeLists.txt  package.xml
crosbot_3d_graphslam_gpu/launch/: createPointCloud.launch  createPointCloudBoardThrottle.launch  createPointCloudStataThrottle.launch  crosbot_3d_graphslam_gpu.launch  crosbot_3d_graphslam_gpu_board.launch  crosbot_3d_graphslam_gpu_stata.launch
crosbot_3d_graphslam_gpu/src/: graphSlam3DGPU.cpp  main.cpp
crosbot_3d_position_track/: CMakeLists.txt  package.xml
crosbot_3d_position_track/src/: main.cpp  positionTrack3D.cpp  positionTrack3DNode.cpp
crosbot_3d_position_track_full/: CMakeLists.txt  package.xml
crosbot_3d_position_track_full/launch/: createPointCloudBoardThrottle.launch  crosbot_3d_position_track_full_board.launch  crosbot_3d_position_track_full_fr.launch
crosbot_3d_position_track_full/src/: main.cpp  positionTrackFull3D.cpp  positionTrackFull3DNode.cpp
crosbot_explore/: CMakeLists.txt  Makefile  package.xml
crosbot_explore/include/crosbot_explore/: astar.hpp  explorer.hpp  set_wallfollow_side.hpp  set_wallfollow_side.hpp~
crosbot_explore/launch/: crosbot-fastslam.launch  explore.launch  explore.launch~  move.launch  setSide.launch
crosbot_explore/scripts/: set_mode_client.py  set_wallfollow_side.py~  set_waypoint_client.py
crosbot_explore/src/: astar.cpp  explorer.cpp  explorer.cpp~  set_wallfollow_side.cpp  set_wallfollow_side.cpp~  waypoint_client.cpp
crosbot_explore/src/nodes/: astar.cpp  explorer.cpp  move.cpp
crosbot_explore/srv/: GetPath.srv  SetMode.srv
crosbot_fastslam/: CMakeLists.txt  package.xml
crosbot_fastslam/launch/: fastslam.gui  fastslam.launch
crosbot_fastslam/src/: fastslam.cpp  heightmap.cpp  module.cpp  particle.cpp  probtable.cpp  serialization.cpp
crosbot_gpu/: CMakeLists.txt  package.xml
crosbot_gpu/src/: openCL.cpp
crosbot_graphslam/: CMakeLists.txt  package.xml
crosbot_graphslam/launch/: createPointCloud.launch  test.launch  (+4 more)
crosbot_graphslam_gpu/: CMakeLists.txt  package.xml
crosbot_map/: CMakeLists.txt  package.xml
crosbot_map/include/crosbot_map/: localmap.hpp  map.hpp  tag.hpp  voronoi.hpp
crosbot_map/msg/: SnapMsg.msg
crosbot_map/src/: localmap.cpp  map.cpp  tag.cpp  voronoi.cpp
crosbot_map/src/nodes/: localmap.cpp
crosbot_map/srv/: GetSnap.srv  ListSnaps.srv  ModifySnap.srv
crosbot_mbicp/: CMakeLists.txt  package.xml
crosbot_msgs/: CMakeLists.txt  package.xml
crosbot_msgs/cfg/: rosdoc.yaml
crosbot_msgs/msg/controls/: ControlCommand.msg  ControlStatus.msg
crosbot_ogmbicp/: CMakeLists.txt  package.xml
crosbot_ogmbicp/include/crosbot_ogmbicp/: Ogmbicp.hpp  OgmbicpCPU.hpp  OgmbicpNode.hpp  PointMap3D.hpp  pointgrid.hpp
crosbot_ogmbicp/launch/: crosbot_ogmbicp.launch
crosbot_ogmbicp/src/: Ogmbicp.cpp  OgmbicpCPU.cpp  OgmbicpNode.cpp  PointMap3D.cpp  main.cpp
crosbot_ogmbicp/srv/: GetRecentScans.srv
crosbot_ogmbicp_gpu/: CMakeLists.txt  package.xml
crosbot_ui/: CMakeLists.txt  Makefile  package.xml
crosbot_ui/include/crosbot_ui/: crosbotgui.hpp  joystick.hpp  opengl.hpp
crosbot_ui/include/crosbot_ui/nodes/: gui.hpp
crosbot_ui/include/crosbot_ui/panels/: map.hpp  panel.hpp  panelfactory.hpp  pointcloud.hpp  robot.hpp  simple.hpp  snap.hpp  snap2.hpp  wasdmouse.hpp
crosbot_ui/include/crosbot_ui/renders/map/: fastslam.hpp  geotiff.hpp  map.hpp
crosbot_ui/include/crosbot_ui/renders/robot/: image.hpp  jointcontrol.hpp  joystick.hpp  preset.hpp  robotwidget.hpp  simple.hpp
crosbot_ui/resources/: resources.qrc
crosbot_ui/src/: crosbotgui.cpp  joystick.cpp  opengl.cpp
crosbot_ui/src/nodes/: geo_logger.cpp  gui.cpp  gui_node.cpp
crosbot_ui/src/panels/: map.cpp  panelfactory.cpp  pointcloud.cpp  robot.cpp  simple.cpp  snap.cpp  snap2.cpp  wasdmouse.cpp
crosbot_ui/src/renders/map/: fastslam.cpp  geotiff.cpp  map.cpp
crosbot_ui/src/renders/robot/: image.cpp  jointcontrol.cpp  joystick.cpp  preset.cpp  robotwidget.cpp  simple.cpp
(+61 files in other folders)
