<?xml version="1.0"?>
<package format="2">
    <name>crosbot_map</name>
    <version>0.0.0</version>
    <description>The crosbot_localmap package</description>
    
    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="mmcgill@todo.todo">mmcgill</maintainer>
    
    
    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>
    
    
    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://ros.org/wiki/crosbot_localmap</url> -->
    
    
    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
    
    <!-- Build tool dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Build and run dependencies -->
    <depend>roscpp</depend>
    <depend>crosbot_msgs</depend>
    <depend>crosbot</depend>
    <depend>nav_msgs</depend>
    
    <!-- build_depend>message_generation</build_depend-->
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- You can specify that this package is a metapackage here: -->
        <!-- <metapackage/> -->
        
        <!-- Other tools can request additional information be placed here -->
    
    </export>
</package>
